# rust_chat

./: .env  Cargo.toml
migrations/: 20231201000000_create_tables.sql
src/: auth.rs  chat.rs  db.rs  main.rs  models.rs  upload.rs  websocket.rs
static/: index.html  script.js  styles.css
uploads/: 7f9c463c-7842-4182-b337-3122f09ef3fc.webm  b7d66e42-9a0b-4151-94f4-b00784a10a49.webm  b913b5ad-c512-44cc-b989-b0d80da0e196.webm
